deployment/deploy.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: fixmycity-api
spec:
  selector:
    matchLabels:
      app: nodejs
      role: backend
  replicas: 1
  template:
    metadata:
      name: fixmycity-api-deployment
      labels:
        app: nodejs
        role: backend
        env: develop
    spec:
      containers:
      - name: fixmycity-api
        image: gcr.io/gcr-project/sample:1.0.0
        resources:
          limits:
            memory: "500Mi"
            cpu: "100m"
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /reports
            port: 1000
        ports:
        - name: fixmycity-port
          containerPort: 1000
