deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fixmycity-api-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 1000
      targetPort: 1000
  selector:
    app: nodejs
    role: backend
